invoice improvments added
